--- a/testsuite/BUILD.bazel
+++ b/testsuite/BUILD.bazel
@@ -2,7 +2,7 @@ cc_binary(
     name = "test",
     srcs = ["flite_test_main.c"],
     deps = [
-        "@flite//lang:usenglish"
+        "@flite//lang:slt",
     ]
 )
 
